--- a/Ethereal Cloud/Ethereal Cloud.csproj
+++ b/Ethereal Cloud/Ethereal Cloud.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Models\" />
     <Folder Include="wwwroot\css\" />
     <Folder Include="wwwroot\js\" />
     <Folder Include="wwwroot\lib\bootstrap\" />
