--- a/Ethereal Cloud/Ethereal Cloud.csproj
+++ b/Ethereal Cloud/Ethereal Cloud.csproj
@@ -11,7 +11,9 @@
 
   <ItemGroup>
     <PackageReference Include="bootstrap" Version="5.3.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.QuickGrid.EntityFrameworkAdapter" Version="8.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.QuickGrid.EntityFrameworkAdapter" Version="8.0.1">
+      <TreatAsUsed>true</TreatAsUsed>
+    </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.1">
       <TreatAsUsed>true</TreatAsUsed>
     </PackageReference>
